--- a/Lin.ImageHelper.nuspec
+++ b/Lin.ImageHelper.nuspec
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <package>
   <metadata>
-    <id>CHCNetSDK</id>
-    <version>2.2.5</version>
-    <title>CHCNetSDK</title>
+    <id>Lin.ImageHelper</id>
+    <version>0.1.3</version>
+    <title>Lin.ImageHelper</title>
     <authors>Lin</authors>
     <owners>Lin</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">MIT</license>
-    <projectUrl>https://github.com/codeoflin/Nuget_CHCNetSDK</projectUrl>
+    <projectUrl>https://github.com/codeoflin/Lin.ImageHelper</projectUrl>
     <!--iconUrl></iconUrl -->
-    <description>海康摄像头SDK封装</description>
+    <description>一个简易图片处理库,也提供一些GIF拆分与合并操作</description>
     <releaseNotes></releaseNotes>
     <copyright></copyright>
-    <tags>海康 HCNetSDK</tags>
+    <tags>图片 Image Gif 动图</tags>
     <serviceable>true</serviceable>
 
     <dependencies>
@@ -33,13 +33,7 @@
       </group>
     </dependencies>
   </metadata>
-  
   <files>
-  
-    <file src="CHCNetSDK.props" target="\build\CHCNetSDK.props" />
     <file src="bin\Release\**\*" target="\lib" />
-    <file src="runtimes\win-x86\*" target="\runtimes\win-x86\native" />
-    <file src="runtimes\win-x64\*" target="\runtimes\win-x64\native" />
   </files>
-
 </package>
